# screen-designer

./: LICENSE  requirements.md  screen-designer.html
grafana/tedemo/: ARCHITECTURE.md  DOCUMENTATION.md  INTERACTIVE_GUIDE.md  README.md
grafana/tedemo/generate/: generate_svg.py
grafana/tedemo/generate/js/: init.js  render.js
grafana/tedemo/generate/style/: defs.xml
grafana/tedemo/ref/old/: te.js  test.html
grafana/tedemo/ref/old/__oldVersions/: airflowm1.xml  plan.md  svg_blueprint.py
grafana/tedemo/ref/old/__oldVersions/tools/: svg_to_python.py
influxdb/: UV_SETUP.md  pyproject.toml  query_influxdb.py  requirements-influxdb.txt  task-getinfluxdata.md
influxdb/query_influxdb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
nodered/: task-nodered.md
nodered/leipzigzoo/: svgviz.orig.txt  svgviz.txt
nodered/leipzigzoo/helper/: genstate.py  get_set_nodes.txt  leipzigzoo-model.json  state_config_flow.txt  values-leipzig.txt
nodered/leipzigzoo/helper/datasources/: flow.json
screendesigner/: reference.html  run.bat  run.ps1  screen-designer.html
